# RGB_Run

./: CMakeLists.txt  README.md  backup.txt
engine/lib_ecm/: ecm.h
engine/src/: engine.cpp  engine.h  system_physics.h  system_resources.cpp  system_resources.h
platformer/: game.h  platformer_main.cpp
platformer/components/: cmp_actor_movement.cpp  cmp_actor_movement.h  cmp_bullet.h  cmp_button.cpp  cmp_button.h  cmp_dm.cpp  cmp_dm.h  cmp_enemy_ai.cpp  cmp_enemy_ai.h  cmp_hurt_enemy.cpp  cmp_hurt_enemy.h  cmp_hurt_player.cpp  cmp_hurt_player.h  cmp_hut_enemy.cpp  cmp_movement_player.cpp  cmp_movement_player.h  cmp_player_physics.cpp  cmp_score.cpp  cmp_score.h  cmp_shooting_enemy.cpp  cmp_shooting_enemy.h  cmp_sprite.cpp  cmp_text.cpp  cmp_text.h
platformer/helper_code/: Controls.cpp  Controls.h  Loader.cpp  Loader.h
platformer/scenes/: scene_level1.cpp  scene_level1.h  scene_menu.cpp  scene_menu.h  scene_options.cpp  scene_options.h
practical_6_platformer/: game.h  physics.cpp  platformer_main.cpp
practical_6_platformer/components/: cmp_actor_movement.cpp  cmp_actor_movement.h  cmp_bullet.cpp  cmp_bullet.h  cmp_dm.cpp  cmp_dm.h  cmp_enemy_ai.cpp  cmp_enemy_ai.h  cmp_hurt_enemy.h  cmp_movement_player - Copy.cpp  cmp_movement_player - Copy.h  cmp_movement_player.cpp  cmp_movement_player.h  cmp_physics.cpp  cmp_platform_physics.cpp  cmp_platform_physics.h  cmp_shooting_enemy.cpp  cmp_shooting_enemy.h
practical_6_platformer/scenes/: scene_level1.cpp  scene_level1.h
rgbrun/: Entity.cpp  Entity.h  Resource_Handler.cpp  Resource_Handler.h  ecm.cpp  ecm.h  main.cpp  rgbRun.cpp  rgbRun.h  scene.cpp  scene.h  system_renderer.cpp  system_renderer.h
